tests/fat/snapshots/fat__test_patching__rpath_remove-3.snap
---
source: tests/fat/test_patching.rs
expression: changed_macho
---
MachO {
    header: Header {
        magic: 0xfeedfacf,
        cputype: 16777223,
        cpusubtype: 0x3,
        filetype: "EXECUTE",
        ncmds: 17,
        sizeofcmds: 1328,
        flags: 0x200085,
        reserved: 0x0,
    },
    load_commands: [
        LoadCommand {
            offset: 32,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 72,
                    segname: [
                        95,
                        95,
                        80,
                        65,
                        71,
                        69,
                        90,
                        69,
                        82,
                        79,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 0,
                    vmsize: 4294967296,
                    fileoff: 0,
                    filesize: 0,
                    maxprot: 0,
                    initprot: 0,
                    nsects: 0,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 104,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 552,
                    segname: [
                        95,
                        95,
                        84,
                        69,
                        88,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 4294967296,
                    vmsize: 4096,
                    fileoff: 0,
                    filesize: 4096,
                    maxprot: 7,
                    initprot: 5,
                    nsects: 6,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 656,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 232,
                    segname: [
                        95,
                        95,
                        68,
                        65,
                        84,
                        65,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 4294971392,
                    vmsize: 4096,
                    fileoff: 4096,
                    filesize: 4096,
                    maxprot: 7,
                    initprot: 3,
                    nsects: 2,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 888,
            command: Segment64(
                SegmentCommand64 {
                    cmd: 25,
                    cmdsize: 72,
                    segname: [
                        95,
                        95,
                        76,
                        73,
                        78,
                        75,
                        69,
                        68,
                        73,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 4294975488,
                    vmsize: 32768,
                    fileoff: 8192,
                    filesize: 18880,
                    maxprot: 7,
                    initprot: 1,
                    nsects: 0,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 960,
            command: DyldInfoOnly(
                DyldInfoCommand {
                    cmd: 2147483682,
                    cmdsize: 48,
                    rebase_off: 8192,
                    rebase_size: 8,
                    bind_off: 8200,
                    bind_size: 24,
                    weak_bind_off: 0,
                    weak_bind_size: 0,
                    lazy_bind_off: 8224,
                    lazy_bind_size: 16,
                    export_off: 8240,
                    export_size: 48,
                },
            ),
        },
        LoadCommand {
            offset: 1008,
            command: Symtab(
                SymtabCommand {
                    cmd: 2,
                    cmdsize: 24,
                    symoff: 8296,
                    nsyms: 4,
                    stroff: 8376,
                    strsize: 56,
                },
            ),
        },
        LoadCommand {
            offset: 1032,
            command: Dysymtab(
                DysymtabCommand {
                    cmd: 11,
                    cmdsize: 80,
                    ilocalsym: 0,
                    nlocalsym: 0,
                    iextdefsym: 0,
                    nextdefsym: 2,
                    iundefsym: 2,
                    nundefsym: 2,
                    tocoff: 0,
                    ntoc: 0,
                    modtaboff: 0,
                    nmodtab: 0,
                    extrefsymoff: 0,
                    nextrefsyms: 0,
                    indirectsymoff: 8360,
                    nindirectsyms: 4,
                    extreloff: 0,
                    nextrel: 0,
                    locreloff: 0,
                    nlocrel: 0,
                },
            ),
        },
        LoadCommand {
            offset: 1112,
            command: LoadDylinker(
                DylinkerCommand {
                    cmd: 14,
                    cmdsize: 32,
                    name: 12,
                },
            ),
        },
        LoadCommand {
            offset: 1144,
            command: Uuid(
                UuidCommand {
                    cmd: 27,
                    cmdsize: 24,
                    uuid: [
                        155,
                        77,
                        251,
                        146,
                        43,
                        81,
                        59,
                        161,
                        149,
                        49,
                        114,
                        113,
                        146,
                        239,
                        54,
                        11,
                    ],
                },
            ),
        },
        LoadCommand {
            offset: 1168,
            command: VersionMinMacosx(
                VersionMinCommand {
                    cmd: 36,
                    cmdsize: 16,
                    version: 658176,
                    sdk: 658176,
                },
            ),
        },
        LoadCommand {
            offset: 1184,
            command: SourceVersion(
                SourceVersionCommand {
                    cmd: 42,
                    cmdsize: 16,
                    version: 0,
                },
            ),
        },
        LoadCommand {
            offset: 1200,
            command: Main(
                EntryPointCommand {
                    cmd: 2147483688,
                    cmdsize: 24,
                    entryoff: 3904,
                    stacksize: 0,
                },
            ),
        },
        LoadCommand {
            offset: 1224,
            command: LoadDylib(
                DylibCommand {
                    cmd: 12,
                    cmdsize: 56,
                    dylib: Dylib {
                        name: 24,
                        timestamp: 2,
                        current_version: 80281857,
                        compatibility_version: 65536,
                    },
                },
            ),
        },
        LoadCommand {
            offset: 1280,
            command: Rpath(
                RpathCommand {
                    cmd: 2147483676,
                    cmdsize: 32,
                    path: 12,
                },
            ),
        },
        LoadCommand {
            offset: 1312,
            command: FunctionStarts(
                LinkeditDataCommand {
                    cmd: 38,
                    cmdsize: 16,
                    dataoff: 8288,
                    datasize: 8,
                },
            ),
        },
        LoadCommand {
            offset: 1328,
            command: DataInCode(
                LinkeditDataCommand {
                    cmd: 41,
                    cmdsize: 16,
                    dataoff: 8296,
                    datasize: 0,
                },
            ),
        },
        LoadCommand {
            offset: 1344,
            command: CodeSignature(
                LinkeditDataCommand {
                    cmd: 29,
                    cmdsize: 16,
                    dataoff: 8432,
                    datasize: 18640,
                },
            ),
        },
    ],
    segments: Segments {
        segments: [
            Segment {
                cmd: 25,
                cmdsize: 72,
                segname: "__PAGEZERO",
                vmaddr: 0,
                vmsize: 4294967296,
                fileoff: 0,
                filesize: 0,
                maxprot: 0,
                initprot: 0,
                nsects: 0,
                flags: 0,
                data: 0,
                sections(): Ok(
                    [],
                ),
            },
            Segment {
                cmd: 25,
                cmdsize: 552,
                segname: "__TEXT",
                vmaddr: 4294967296,
                vmsize: 4096,
                fileoff: 0,
                filesize: 4096,
                maxprot: 7,
                initprot: 5,
                nsects: 6,
                flags: 0,
                data: 4096,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__text",
                            segname: "__TEXT",
                            addr: 4294971200,
                            size: 45,
                            offset: 3904,
                            align: 4,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484672,
                        },
                        Section {
                            sectname: "__stubs",
                            segname: "__TEXT",
                            addr: 4294971246,
                            size: 6,
                            offset: 3950,
                            align: 1,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484680,
                        },
                        Section {
                            sectname: "__stub_helper",
                            segname: "__TEXT",
                            addr: 4294971252,
                            size: 26,
                            offset: 3956,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484672,
                        },
                        Section {
                            sectname: "__cstring",
                            segname: "__TEXT",
                            addr: 4294971278,
                            size: 15,
                            offset: 3982,
                            align: 0,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2,
                        },
                        Section {
                            sectname: "__unwind_info",
                            segname: "__TEXT",
                            addr: 4294971296,
                            size: 72,
                            offset: 4000,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 0,
                        },
                        Section {
                            sectname: "__eh_frame",
                            segname: "__TEXT",
                            addr: 4294971368,
                            size: 24,
                            offset: 4072,
                            align: 3,
                            reloff: 0,
                            nreloc: 0,
                            flags: 0,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 25,
                cmdsize: 232,
                segname: "__DATA",
                vmaddr: 4294971392,
                vmsize: 4096,
                fileoff: 4096,
                filesize: 4096,
                maxprot: 7,
                initprot: 3,
                nsects: 2,
                flags: 0,
                data: 4096,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__nl_symbol_ptr",
                            segname: "__DATA",
                            addr: 4294971392,
                            size: 16,
                            offset: 4096,
                            align: 3,
                            reloff: 0,
                            nreloc: 0,
                            flags: 6,
                        },
                        Section {
                            sectname: "__la_symbol_ptr",
                            segname: "__DATA",
                            addr: 4294971408,
                            size: 8,
                            offset: 4112,
                            align: 3,
                            reloff: 0,
                            nreloc: 0,
                            flags: 7,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 25,
                cmdsize: 72,
                segname: "__LINKEDIT",
                vmaddr: 4294975488,
                vmsize: 32768,
                fileoff: 8192,
                filesize: 18880,
                maxprot: 7,
                initprot: 1,
                nsects: 0,
                flags: 0,
                data: 18880,
                sections(): Ok(
                    [],
                ),
            },
        ],
    },
    entry: 4294971200,
    old_style_entry: false,
    libs: [
        "self",
        "/usr/lib/libSystem.B.dylib",
    ],
    name: None,
    little_endian: true,
    is_64: true,
    symbols(): [
        Ok(
            (
                "__mh_execute_header",
                Nlist {
                    n_strx: 2,
                    n_type: 15,
                    n_sect: 1,
                    n_desc: 16,
                    n_value: 4294967296,
                },
            ),
        ),
        Ok(
            (
                "_main",
                Nlist {
                    n_strx: 22,
                    n_type: 15,
                    n_sect: 1,
                    n_desc: 0,
                    n_value: 4294971200,
                },
            ),
        ),
        Ok(
            (
                "_printf",
                Nlist {
                    n_strx: 28,
                    n_type: 1,
                    n_sect: 0,
                    n_desc: 256,
                    n_value: 0,
                },
            ),
        ),
        Ok(
            (
                "dyld_stub_binder",
                Nlist {
                    n_strx: 36,
                    n_type: 1,
                    n_sect: 0,
                    n_desc: 256,
                    n_value: 0,
                },
            ),
        ),
    ],
    exports(): Ok(
        [
            Export {
                name: "__mh_execute_header",
                info: Regular {
                    address: 0,
                    flags: 0,
                },
                size: 0,
                offset: 0,
            },
            Export {
                name: "_main",
                info: Regular {
                    address: 3904,
                    flags: 0,
                },
                size: 0,
                offset: 3904,
            },
        ],
    ),
    imports(): Ok(
        [
            Import {
                name: "dyld_stub_binder",
                dylib: "/usr/lib/libSystem.B.dylib",
                is_lazy: false,
                offset: 4096,
                size: 0,
                address: 4294971392,
                addend: 0,
                is_weak: false,
                start_of_sequence_offset: 0,
            },
            Import {
                name: "_printf",
                dylib: "/usr/lib/libSystem.B.dylib",
                is_lazy: true,
                offset: 4112,
                size: 8,
                address: 4294971408,
                addend: 0,
                is_weak: false,
                start_of_sequence_offset: 0,
            },
        ],
    ),
}
