tests/fat/snapshots/fat__test_patching__rpath_remove-4.snap
---
source: tests/fat/test_patching.rs
expression: changed_macho.rpaths
---
[
    "made_up_path",
]
